--- a/src/components/TodoList/TodoEdit.scss
+++ b/src/components/TodoList/TodoEdit.scss
@@ -1,33 +1,45 @@
-.TodoInsert {
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: 5;
+  background-color: rgba(0, 0, 0, 0.548);
+}
+.todoedit__insert {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
+  background-color: white;
   display: flex;
-  background: #495057;
-  input {
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  h2 {
+    box-sizing: border-box;
     width: 100%;
-    background: none;
-    outline: none;
-    border: none;
+    margin: 0;
+    text-align: center;
     padding: 0.5rem;
-    font-size: 1.125rem;
-    line-height: 1.5;
+    background-color: #9c88ff;
     color: white;
-    &::placeholder {
-      color: #dee2e6;
-    }
+  }
+  input {
+    margin: 2rem 0;
+    padding: 0.3rem;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid #9c88ff;
   }
   button {
-    background: none;
-    outline: none;
+    cursor: pointer;
+    background-color: #9c88ff;
     border: none;
-    background: #868e96;
     color: white;
-    padding: 0 1rem;
-    font-size: 1.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 0.1s background ease-in;
-    &:hover {
-      background: #adb5bd;
-    }
+    padding: 0.5rem 1rem;
+    margin-bottom: 1rem;
   }
 }
